--- a/Delivery Calculator/Base.lproj/LaunchScreen.storyboard
+++ b/Delivery Calculator/Base.lproj/LaunchScreen.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14269.12" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14252.5"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,37 +18,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PVA_logo" translatesAutoresizingMaskIntoConstraints="NO" id="TPa-r6-AOb">
-                                <rect key="frame" x="0.0" y="214.66666666666663" width="375" height="383"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="TPa-r6-AOb" secondAttribute="height" multiplier="375:383" id="wev-fj-21B"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright © 2018 Petrovector Group. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xua-gK-wj3">
-                                <rect key="frame" x="10" y="754" width="355" height="16"/>
+                                <rect key="frame" x="10" y="754.33333333333337" width="355" height="15.666666666666629"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="250" image="PVA_logo" translatesAutoresizingMaskIntoConstraints="NO" id="RF8-aM-Sla">
+                                <rect key="frame" x="0.0" y="-921" width="375" height="2654"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="TPa-r6-AOb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3fm-9O-E0a"/>
-                            <constraint firstItem="TPa-r6-AOb" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Bwg-gI-VZU"/>
+                            <constraint firstItem="RF8-aM-Sla" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3B8-NI-Niw"/>
+                            <constraint firstItem="RF8-aM-Sla" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="E6G-la-xRV"/>
+                            <constraint firstAttribute="trailing" secondItem="RF8-aM-Sla" secondAttribute="trailing" id="ICQ-tK-sQ1"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xua-gK-wj3" secondAttribute="bottom" constant="8" id="NOa-m5-eDs"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xua-gK-wj3" secondAttribute="trailing" constant="10" id="Nes-TT-FLp"/>
+                            <constraint firstItem="RF8-aM-Sla" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="cMi-iT-DQC"/>
                             <constraint firstItem="xua-gK-wj3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="j10-1e-mC6"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TPa-r6-AOb" secondAttribute="trailing" id="zdK-kd-fv6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.6305418719212"/>
         </scene>
     </scenes>
     <resources>
-        <image name="PVA_logo" width="383" height="383"/>
+        <image name="PVA_logo" width="4710" height="2654"/>
     </resources>
 </document>
