--- a/Delivery Calculator/Base.lproj/Main.storyboard
+++ b/Delivery Calculator/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Agq-Th-yDv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14269.12" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JOD-5Q-qgA">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14252.5"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -89,7 +88,7 @@
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GDd-AS-7Bg">
-                                        <rect key="frame" x="60" y="323" width="295" height="50"/>
+                                        <rect key="frame" x="59.666666666666657" y="323" width="295" height="50"/>
                                         <color key="backgroundColor" red="0.0" green="0.47843137254901957" blue="1" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="Pxl-eb-3ZL"/>
@@ -164,7 +163,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Калькулятор" id="MEj-02-YWd">
-                        <barButtonItem key="backBarButtonItem" title=" " id="woc-PH-fWi"/>
+                        <barButtonItem key="backBarButtonItem" title=" " id="bMT-TU-jcI"/>
                         <barButtonItem key="rightBarButtonItem" title=" " image="settings" id="TE1-0B-ffr">
                             <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
@@ -185,7 +184,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1031" y="-251"/>
+            <point key="canvasLocation" x="1937.68115942029" y="-251.08695652173915"/>
         </scene>
         <!--Настройки-->
         <scene sceneID="MhW-QW-edQ">
@@ -195,7 +194,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="xge-gG-ro2">
+                        <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="xge-gG-ro2">
                             <rect key="frame" x="0.0" y="668" width="414" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.0" green="0.47843137254901957" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -284,7 +283,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="cFE-o4-uuq">
-                                                    <rect key="frame" x="15" y="6" width="384" height="30"/>
+                                                    <rect key="frame" x="15" y="7" width="384" height="30"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Дизель" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rTb-yo-goO">
                                                             <rect key="frame" x="0.0" y="0.0" width="128" height="30"/>
@@ -563,7 +562,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Lxj-P7-6E1">
-                                                    <rect key="frame" x="15" y="6" width="384" height="30"/>
+                                                    <rect key="frame" x="15" y="7" width="384" height="30"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="АИ-92" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9jj-x8-Tys">
                                                             <rect key="frame" x="0.0" y="0.0" width="192" height="30"/>
@@ -596,7 +595,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="bJQ-Tq-BKX">
-                                                    <rect key="frame" x="15" y="6" width="384" height="30"/>
+                                                    <rect key="frame" x="15" y="7" width="384" height="30"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="АИ-95" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LY5-KL-Rlx">
                                                             <rect key="frame" x="0.0" y="0.0" width="192" height="30"/>
@@ -629,7 +628,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="gaP-NI-Z6j">
-                                                    <rect key="frame" x="15" y="6" width="384" height="30"/>
+                                                    <rect key="frame" x="15" y="7" width="384" height="30"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ДТ" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cuf-o0-vM6">
                                                             <rect key="frame" x="0.0" y="0.0" width="192" height="30"/>
@@ -679,30 +678,111 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GYp-5c-2yZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1911" y="-250"/>
+            <point key="canvasLocation" x="2817.3913043478265" y="-250.27173913043481"/>
         </scene>
-        <!--Калькулятор-->
-        <scene sceneID="oZu-QD-fw4">
+        <!--Navigation Controller-->
+        <scene sceneID="7la-qz-xex">
             <objects>
-                <navigationController title="Калькулятор" automaticallyAdjustsScrollViewInsets="NO" id="Agq-Th-yDv" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Расчет стоимости на НБ" id="Geg-ih-ilz"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Cp3-bg-ba4" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="oUU-oA-u2H">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rNV-1E-Fk3">
                         <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="3ys-YE-Vz2"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="wUZ-gM-YvJ"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ml8-cX-Bc1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t8D-No-0vc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="140" y="-251"/>
+            <point key="canvasLocation" x="1030.4347826086957" y="-251.08695652173915"/>
+        </scene>
+        <!--LoginVC-->
+        <scene sceneID="iX5-K1-c9e">
+            <objects>
+                <viewController id="JOD-5Q-qgA" customClass="LoginVC" customModule="Delivery_Calculator" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="h34-R2-rju">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="di3-sV-2H1">
+                                <rect key="frame" x="32" y="316" width="350" height="64"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Логин" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="WTH-oC-Dv5">
+                                        <rect key="frame" x="0.0" y="0.0" width="350" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="MNy-mS-tk8"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="done" textContentType="tel"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Пароль" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="KlP-Di-8ac">
+                                        <rect key="frame" x="0.0" y="40" width="350" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="sGd-Me-ERy"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES" textContentType="password"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PVA_logo" translatesAutoresizingMaskIntoConstraints="NO" id="QXJ-ss-BMZ">
+                                <rect key="frame" x="8" y="52" width="398" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="gl8-yc-c3U"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bti-Ie-rD7">
+                                <rect key="frame" x="59.666666666666657" y="412" width="295" height="50"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="O3r-ep-6Dg"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="295" id="qMq-6S-dfB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <state key="normal" title="Войти">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.clipToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="loginButtonPressed:" destination="JOD-5Q-qgA" eventType="touchUpInside" id="54Z-ph-86g"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="i2N-Ti-0g9" firstAttribute="trailing" secondItem="QXJ-ss-BMZ" secondAttribute="trailing" constant="8" id="4tM-vE-6l3"/>
+                            <constraint firstItem="QXJ-ss-BMZ" firstAttribute="top" secondItem="i2N-Ti-0g9" secondAttribute="top" constant="32" id="5rU-Yh-TfG"/>
+                            <constraint firstItem="i2N-Ti-0g9" firstAttribute="trailing" secondItem="di3-sV-2H1" secondAttribute="trailing" constant="32" id="UTE-1S-33Q"/>
+                            <constraint firstItem="di3-sV-2H1" firstAttribute="top" secondItem="QXJ-ss-BMZ" secondAttribute="bottom" constant="64" id="a8I-0H-JIN"/>
+                            <constraint firstItem="bti-Ie-rD7" firstAttribute="top" secondItem="di3-sV-2H1" secondAttribute="bottom" constant="32" id="bzI-c9-N7s"/>
+                            <constraint firstItem="di3-sV-2H1" firstAttribute="leading" secondItem="i2N-Ti-0g9" secondAttribute="leading" constant="32" id="gtY-Si-Wpc"/>
+                            <constraint firstItem="QXJ-ss-BMZ" firstAttribute="leading" secondItem="i2N-Ti-0g9" secondAttribute="leading" constant="8" id="heV-WZ-vzP"/>
+                            <constraint firstItem="bti-Ie-rD7" firstAttribute="centerX" secondItem="h34-R2-rju" secondAttribute="centerX" id="j2x-Qt-3zK"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="i2N-Ti-0g9"/>
+                    </view>
+                    <connections>
+                        <outlet property="login" destination="WTH-oC-Dv5" id="SXm-mX-SPN"/>
+                        <outlet property="password" destination="KlP-Di-8ac" id="5hL-0J-RlL"/>
+                        <segue destination="Cp3-bg-ba4" kind="show" identifier="Login" id="WNT-yC-2Ul"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4V4-dP-24Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="169.56521739130437" y="-250.27173913043481"/>
         </scene>
     </scenes>
     <resources>
+        <image name="PVA_logo" width="4710" height="2654"/>
         <image name="settings" width="30" height="30"/>
     </resources>
 </document>
